Added protein expression data example
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_3_3/madman/Rpacks/BatchQC@118755 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/BatchQCIntro.Rmd
+++ b/vignettes/BatchQCIntro.Rmd
@@ -118,3 +118,12 @@ batchQC(edata, batch=batch, condition=condition,
         report_option_binary="111111111",
         view_report=FALSE, interactive=TRUE)
 ```
+### Apply BatchQC on a real protein expression dataset
+```r
+library(BatchQC)
+data(protein_example_data)
+batchQC(protein_data, protein_sample_info$Batch, protein_sample_info$category,
+        report_file="batchqc_protein_data_report.html", report_dir=".", 
+        report_option_binary="111111111",
+        view_report=FALSE, interactive=TRUE)
+```
