Checking for errors in num.sv function; Passing the clean option as false to avoid deletion of image files needed for static reports
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_3_3/madman/Rpacks/BatchQC@120606 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/reports/batchqc_report.Rmd
+++ b/inst/reports/batchqc_report.Rmd
@@ -353,6 +353,13 @@ if (ncond <= 1)  {
 } else  {
     modmatrix = model.matrix(~as.factor(condition), data = pdata)
 }
-n.sv <- batchQC_num.sv(shinyInput$lcounts, modmatrix)
+n.sv <- tryCatch({
+    batchQC_num.sv(shinyInput$lcounts, modmatrix)
+}, error = function(err) {
+    warning("Error in BatchQC num.sv surrogate variables compution: ",err)
+    return(NULL)
+})
+if (!is.null(n.sv))  {
 cat(paste("Number of Surrogate Variables found in the given data:", n.sv))
+}
 ```
